Adding additional jvm params