@@ -6,9 +6,14 @@
 -Djava.net.preferIPv4Stack=true
 -XX:+UseStringCache
 -client
--XX:-HeapDumpOnOutOfMemoryError
+-XX:+HeapDumpOnOutOfMemoryError
 -XX:-PrintClassHistogram
--XX:-PrintConcurrentLocks
--XX:-PrintCommandLineFlags
+-XX:+PrintConcurrentLocks
+-XX:+PrintCommandLineFlags
 -XX:+PreserveFramePointer
-
+-XX:-CMSClassUnloadingEnabled
+-XX:+HeapDumpOnCtrlBreak
+-XX:+HeapDumpOnOutOfMemoryError
+-XX:MaxPermSize=512M
+-XX:CMSInitiatingOccupancyFraction=90
+-XX:MaxHeapFreeRatio=90
